[package]
name = "telegramBot"
version = "0.1.0"
authors = ["Damien Maier <damien@synthesis.co.za>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = { git = "https://github.com/mann-ed/telegram-bot", branch = "master" }
tokio = { version = "1.2", features = ["full"]}
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.60"
